升级依赖